# Anskaffelsessjekk

./: .gitattributes  .gitignore  Anskaffelsessjekk_audyt_panel_brief_v1.md  CLAUDE.md  README.md  demo.py  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml
.streamlit/: config.toml
anskaffelsessjekk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: Hjem.py  chrome.py  db.py  texts.py  ui_common.py  ui_forpliktelser.py
app/pages/: 1_Fakturakontroll.py  2_Avtaler_og_forpliktelser.py  3_Leverandorer.py  3_Leverandører.py  3_Terskelsjekk.py  4_Styringsinformasjon.py  4_Terskelsjekk.py  5_Styringsinformasjon.py  6_Plattformen.py  7_Sikkerhet.py
core/: __init__.py
core/extraction/: __init__.py  ehf.py  epost.py
core/matching/: __init__.py  commitments.py  currency.py  findings.py  three_way.py
core/models/: __init__.py  audit.py  commitment.py  contract.py  invoice.py  order.py  receipt.py  supplier.py
core/reporting/: __init__.py  classify.py  protokoll.py
core/rules/: __init__.py  engine.py
core/rules/data/: regimes.yaml  thresholds_2026.yaml
core/rules/data/profiles/: demo_reglement.yaml
core/synth/: __init__.py  epost_examples.py  leverandor_profiler.py  scenario_deler.py  scenario_konsulent.py
docs/: ARCHITECTURE.md  BRAND.md  BRIEF_ARBEIDSFLATE_V2.md  BRIEF_EPOST_FLYT.md  BRIEF_LEVERANDORKORT_V2.md  BRIEF_VALUTA_V1.md  BRIEF_VERIFISERING_V1.md  STATUS.md
docs/mockups/: arbeidsflate.html
nowe/: Anskaffelsessjekk_brief_Arbeidsflate_v2.md
tests/: __init__.py  test_ehf.py  test_epost.py  test_evaluate_vs_check.py  test_leverandorkort.py  test_matcher_e2e.py  test_models.py  test_protokoll.py  test_reglement.py  test_rules_thresholds.py  test_valuta.py
