[project]
name = "anskaffelsessjekk"
version = "0.1.0"
description = "KI-drevet kontroll av fakturaer, avtaler og anskaffelsesregelverk for offentlig sektor"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.16",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.10"]
ui = ["streamlit>=1.35"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
