[project]
name = "anskaffelsessjekk"
version = "0.2.0"
description = "KI-drevet kontroll av fakturaer, avtaler og anskaffelsesregelverk for offentlig sektor"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.16",
    "pyyaml>=6.0",
    "fpdf2>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.10"]
ui = ["streamlit>=1.35"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*"]

[tool.setuptools.package-data]
"core.rules" = ["data/*.yaml", "data/profiles/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
