[project]
name = "anskaffelsessjekk"
version = "0.3.0"
description = "KI-drevet kontroll av fakturaer, avtaler og anskaffelsesregelverk for offentlig sektor"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.16",
    "pyyaml>=6.0",
    "fpdf2>=2.8",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.10"]
ui = ["streamlit>=1.35"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*"]

[tool.setuptools.package-data]
"core.rules" = ["data/*.yaml", "data/profiles/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # line length is enforced by the formatter; long data/citation strings are fine
    "UP042",  # (str, Enum) is intentional — str(enum) and rule_hits_json serialization depend on it
]

[tool.ruff.lint.per-file-ignores]
# Streamlit pages import chrome/db after set_page_config by design (must run first).
"app/**" = ["E402"]
